# glTF-Maya-Exporter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Contributions.md  LICENSE  README.md  vc2017setup.bat
docs/: PBR_Parameters.txt  README_en.txt  README_ja.txt
project/windows/glTFExporter/: Readme.txt  glTFExporter.sln
project/windows/glTFExporter/glTFExporter/: glTFExporter.vcxproj  glTFExporter.vcxproj.filters
project/windows/glTFExporter/kil/: kil.vcxproj  kil.vcxproj.filters
project/windows/glTFExporter/kml/: kml.vcxproj  kml.vcxproj.filters
scripts/: glTFExporterOptions.mel  glTFExporterOptions.res.mel  vrmExporterOptions.mel  vrmExporterOptions.res.mel
src/: glTFExporter_dev.cpp  glTFExporter_sk.cpp
src/cppexporter/: exporter.h  main.cpp
src/cppexporter/test/: test.cpp
src/glTFExporter/: ProgressWindow.cpp  ProgressWindow.h  glTFExporter.cpp  glTFExporter.h  glTFExporterRegist.cpp  glTFExporterRegister.cpp  glTFTranslator.cpp  glTFTranslator.h  vrmExporterRegist.cpp  vrmExporterRegister.cpp
src/kil/: CopyTextureFile.cpp  CopyTextureFile.h  CopyTextureFile_GdiPlus.cpp  CopyTextureFile_GdiPlus.h  CopyTextureFile_STB.cpp  CopyTextureFile_STB.h  ResizeTextureFile.cpp  ResizeTextureFile.h
src/kml/: Animation.h  Bound.cpp  Bound.h  CalculateBound.cpp  CalculateBound.h  CalculateNormalsMesh.cpp  CalculateNormalsMesh.h  Compatibility.cpp  Compatibility.h  FlatIndicesMesh.cpp  FlatIndicesMesh.h  GLTF2GLB.cpp  GLTF2GLB.h  GLTFExporter.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MorphTargets.h  Node.cpp  Node.h  NodeExporter.cpp  NodeExporter.h  Options.cpp  Options.h  SaveToDraco.cpp  SaveToDraco.h  Skeleton.cpp  Skeleton.h  Skin.h  SkinWeights.h  SplitNodeByMaterialID.cpp  SplitNodeByMaterialID.h  Texture.h  Transform.cpp  Transform.h  TriangulateMesh.cpp  TriangulateMesh.h  glTFComponents.h  glTFExporter.cpp  (+3 more)
